# ChangeLog for dev-java/log4j
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/log4j/ChangeLog,v 1.66 2008/04/28 21:02:15 betelgeuse Exp $

  28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> log4j-1.2.15.ebuild:
  LICENSE to Apache-2.0.

*log4j-1.2.15-r1 (28 Apr 2008)

  28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  +log4j-1.2.15-r1.ebuild:
  Use java-virtuals/jaf, fix LICENSE to Apache-2.0 and use
  java-pkg-2_src_compile.

  04 Apr 2008; Kenneth Prugh <ken69267@gentoo.org> log4j-1.2.15.ebuild:
  amd64 stable, bug #214782

  29 Mar 2008; Christian Faulhammer <opfer@gentoo.org> log4j-1.2.15.ebuild:
  stable x86, bug 214782

  25 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> log4j-1.2.15.ebuild:
  Add ~ppc and ~ppc64 that should have been added to this version too when
  doing bug #209965.

  20 Feb 2008; nixnut <nixnut@gentoo.org> log4j-1.2.14-r2.ebuild:
  Added ~ppc wrt bug 209965

  13 Feb 2008; Brent Baude <ranger@gentoo.org> log4j-1.2.14-r2.ebuild:
  keyworded ~arch for ppc64, bug 209965

  13 Feb 2008; Alistair Bush <ali_bush@gentoo.org> log4j-1.2.14-r1.ebuild,
  log4j-1.2.14-r2.ebuild, log4j-1.2.15.ebuild:
  Replacing direct execution of xml-rewrite.py with a call to
  java-ant_xml-rewrite. see #209956

*log4j-1.2.15 (06 Feb 2008)

  06 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> +log4j-1.2.15.ebuild:
  Version bump

  28 Nov 2007; <ali_bush@gentoo.org> log4j-1.2.14-r2.ebuild:
  Dropping ~arch's not keyworded in java-virtuals/javamail yet.

*log4j-1.2.14-r2 (20 Nov 2007)

  20 Nov 2007; <ali_bush@gentoo.org> +log4j-1.2.14-r2.ebuild:
  Bumping to support javamail virtual.

  24 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  log4j-1.2.14-r1.ebuild:
  filter jikes

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org> -log4j-1.2.9.ebuild:
  Cleanup.

  10 Feb 2007; nixnut <nixnut@gentoo.org> log4j-1.2.14-r1.ebuild:
  Stable on ppc wrt bug 163625
