@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/log4j
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/log4j/ChangeLog,v 1.66 2008/04/28 21:02:15 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/log4j/ChangeLog,v 1.67 2008/04/28 21:26:42 betelgeuse Exp $
+
+  28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
+  -log4j-1.2.14-r2.ebuild:
+  Remove useless revision.
 
   28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> log4j-1.2.15.ebuild:
   LICENSE to Apache-2.0.
